--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^19.2.1",
     "@xterm/xterm": "^5.5.0",
     "buffer": "^6.0.3",
+    "dotenv-webpack": "^8.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
