--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "tszm": "^0.9.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "xterm-addon-fit": "^0.8.0"
